# duck_pypi

./: .example.env  .gitignore  Makefile  dbt_cloud.yml  main.py  profile.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
dashboard/pages/: index.md
ingestion/: bigquery.py  duck.py  models.py  pipeline.py
tests/ingestion/: sample_file_downloads.csv  test_duck.py  test_models.py
transform/: .gitignore
transform/pypi_duckdb_stats/: dbt_project.yml  package-lock.yml
transform/pypi_duckdb_stats/macros/: export_partition_data.sql
transform/pypi_duckdb_stats/models/stats/: pypi_daily_stats.sql  pypi_models.yml  pypi_source.yml  source.yml
transform/pypi_duckdb_stats/tests/: test_pypi_daily_stats.sql
